--- a/Project Complete - add multer - bcrypt - swagger packages/package.json
+++ b/Project Complete - add multer - bcrypt - swagger packages/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-validator": "^7.0.1",
