--- a/Project Complete - add multer - bcrypt - swagger packages/package.json
+++ b/Project Complete - add multer - bcrypt - swagger packages/package.json
@@ -17,7 +17,9 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
